# SigmaFlow

./: .env  .gitignore  AGENTS.md  CITATION.cff  Dockerfile  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: docker-publish.yml  pypi-publish.yml  release.yml
example/: .env  README.md  demo.py  demo_data.json  demo_pipeline.py  demo_sub_pipeline.py  test.py
examples/: README.md  demo.py  demo_pipeline.py  demo_sub_pipeline.py  test.py  test_pipeline.py
examples/Med-FoT/: MedFoT_pipeline.py  README.md
examples/adverse_drug_reactions/: README.md  adr_pipeline.py
examples/demo/: README.md  demo.py  demo_input.json  demo_pipeline.py  demo_sub_pipeline.py
examples/epidemic_response_plan/: README.md  epidemic_response_plan_pipeline.py
examples/meteorological_infectious_disease/: README.md  meteorological_infectious_disease_pipeline.py
sigmaflow/: cmd.py  imports.py  log.py  manager.py  pipe.py  pipeline.py  pipetree.py  utils.py
sigmaflow/blocks/: base.py  block_llm.py  block_rag.py
sigmaflow/clients/: __init__.py  llm_openai.py
sigmaflow/managers/: __init__.py  pipeline_manager.py
sigmaflow/nodes/: __init__.py  base.py  constant.py  node.py  node_branch.py  node_browser.py  node_code.py  node_database.py  node_exit.py  node_file.py  node_llm.py  node_loop.py  node_rag.py  node_value.py  node_web.py
sigmaflow/pipeline/: graph.py  pipegraph.py  pipeline.py
sigmaflow/prompts/: __init__.py
src/sigmaflow/: cmd.py  (+4 more)
tests/: test_workspace_api.py
(+127 files in other folders)
